--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,7 +1,5 @@
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+@import "variables";
+@import "global";
+@import "mixin";
+@import "header";
+@import "hero";
