--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,9 @@
 @import "variables";
-@import "global";
 @import "mixin";
 @import "header";
 @import "hero";
-@import "categories"
+@import "categories";
+@import "movie-list";
+@import "nav";
+@import "book-seat";
+@import "global";
