--- a/assets/scss/_mixin.scss
+++ b/assets/scss/_mixin.scss
@@ -10,6 +10,7 @@ $breakpoints-down : (
     // 1023px , 767px , 500px
     "desktop" : "63.9375em",
     "tablet" : "47.9375em",
+    "mid-tablet" : "36.25em",
     "mobile" : "31.25em"
 );
 
