--- a/assets/scss/_hero.scss
+++ b/assets/scss/_hero.scss
@@ -46,7 +46,7 @@
     outline: none;
     text-align: center;
     border-radius: 10px 0 0 10px;
-    font-size: 24px;
+    font-size: var(--fs-med);
   }
   > input:focus {
       box-shadow: 0 0 30px rgba(0, 0, 0, .2);
@@ -62,6 +62,49 @@
     &:hover {
         cursor: pointer;
         box-shadow: 0 0 20px rgba(0, 0, 0, .2);
+    }
+  }
+}
+@include breakpoint-down(desktop) {
+  .hero__container {
+    // max-height: 20em;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+  }
+  .search__container {
+    > input {
+      min-width: 20em;
+    }
+  }
+}
+@include breakpoint-down(tablet) {
+  .hero {
+    --p-in : 2em;
+  }
+  .hero__container {
+    max-height: 20em;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+  }
+}
+@include breakpoint-down(mid-tablet) {
+  .hero .hero__container {
+    > h2 {
+      --fs-xl : 1.6em !important;
+    }
+  }
+  .movie-name-container {
+    margin-top: 2em;
+    h2 {
+      --ml : 1em;
+      --mr : 1em;
+    }
+  }
+  .search__container {
+    > input {
+      min-width: 15em;
     }
   }
 }
