--- a/assets/scss/_hero.scss
+++ b/assets/scss/_hero.scss
@@ -13,7 +13,7 @@
 }
 .hero__container {
   height: 25em;
-  background: url(./assets/images/extraction.jpg);
+  background: url(https://masterpranay1.github.io/Movie-seat-booking/assets/images/extraction.jpg);
   background-size: 100%;
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.5);
 
