--- a/assets/scss/_categories.scss
+++ b/assets/scss/_categories.scss
@@ -51,6 +51,7 @@
     > li {
       width: var(--li-width);
       text-transform: capitalize;
+      margin-right: 2em;
       img {
         width: var(--li-width);
         height: var(--li-width);
