--- a/assets/scss/_hero.scss
+++ b/assets/scss/_hero.scss
@@ -13,7 +13,7 @@
 }
 .hero__container {
   height: 25em;
-  background: url("https://masterpranay1.github.io/Movie-seat-booking/assets/images/extraction.jpg");
+  background: url(/assets/images/extraction.jpg);
   background-size: 100%;
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.5);
 
@@ -47,6 +47,7 @@
     text-align: center;
     border-radius: 10px 0 0 10px;
     font-size: var(--fs-med);
+    padding: 1em;
   }
   > input:focus {
       box-shadow: 0 0 30px rgba(0, 0, 0, .2);
@@ -105,6 +106,19 @@
   .search__container {
     > input {
       min-width: 15em;
+    }
+  }
+}
+@include breakpoint-down(mobile) {
+  .search__container {
+    > input {
+      min-width: 8em;
+    }
+    > input:placeholder-shown {
+      font-size: var(--fs-s);
+    }
+    > .img-container {
+      padding : 0.5em 1em;
     }
   }
 }
